# kinoRRTstar

./: .gitignore  DoubleIntegral.py  DoubleIntegrator.py  README.md  Tree.py  World.py  kinoRRT.py  main.py  rand.py
All examples/2DDI/PFFCircle/: RRTstar3D.prj  benchmarkRRT.m  collision.m  collisionFreeVel.m  collision_point.m  findMinimumPath.m  perfAnaly.m  segment_cost.m  segment_costFreeVel.m
All examples/PFFCircle/: collision.m  collisionFreeVel.m  createKnownWorld.m  segment_cost.m  segment_costFreeVel.m
MATLAB/: DI3d_cost.m  DI3d_costFreeVel.m  DI3d_stateFreeVel.m  DI3d_time.m  DI_stateFreeVel.m  DI_timeFreeVel.m  Makefile  RRTstar3D.m  RRTstar3D.prj  benchmarkRRT.m  benchmarkRRT.prj  buildInfo.mat  collision.m  collisionFreeVel.m  collisionFreeVelKnowTf.m  collisionKnowTf.m  collision_point.m  cost_eval.m  cost_np.m  cost_npFreeVel.m  createKnownWorld.m  findMinCost.m  findMinimumPath.m  gen_exe.m  main.h  opt_time.m  plotExpandedTree.m  plotTraj.m  plotWorld.m  runtime.txt  segment_cost.m  segment_costFreeVel.m  state_traj.m
MATLAB/codegen/exe/benchmark/html/: report.mldatx
MATLAB/codegen/exe/benchmarkRRT/: RRTstar3D.c  RRTstar3D.h  benchmarkRRT.c  benchmarkRRT_emxutil.c  benchmarkRRT_rtw.mk  benchmarkRRT_rtw.rsp  benchmarkRRT_types.h  buildInfo.mat  codeInfo.mat  collision.c  collision.h  cost_eval.c  cost_eval.h  findMinCost.c  norm.h  roots.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h  segment_cost.c  sqrt.h  state_traj.h  xdlapy3.c  xgehrd.c  xnrm2.c  xzhgeqz.h  xzhseqr.c  xzlarfg.h
MATLAB/codegen/lib/benchmarkRRT/: RRTstar3D.c  RRTstar3D.h  benchmarkRRT.c  benchmarkRRT.h  benchmarkRRT_data.h  benchmarkRRT_emxutil.h  benchmarkRRT_rtw.mk  benchmarkRRT_rtw.rsp  benchmarkRRT_terminate.h  buildInfo.mat  codeInfo.mat  collision.c  collisionKnowTf.c  collisionKnowTf.h  cost_eval.c  eml_rand_mt19937ar_stateful.c  gcGuiReport.mat  linspace.h  norm.c  opt_time.c  opt_time.h  rtGetInf.h  rt_nonfinite.c  segment_cost.c  segment_cost.h  sqr_eucl_dist.c  sqrt.c  state_traj.c  xdlapy3.h  xnrm2.h  xzgeev.c  xzgeev.h  xzlarfg.c  xzlartg.c
MATLAB/codegen/mex/RRTstar3D/: cfiGuiReport.mat
MATLAB/codegen/mex/benchmarkRRT/: benchmarkRRT_mex.mexw64  cfiGuiReport.mat
MATLAB/src/: Makefile  RRTstar3D.c  RRTstar3D.h  anyNonFinite.c  anyNonFinite.h  benchmarkRRT  benchmarkRRT.c  benchmarkRRT.h  benchmarkRRT_data.c  benchmarkRRT_data.h  benchmarkRRT_emxutil.c  benchmarkRRT_emxutil.h  benchmarkRRT_initialize.c  benchmarkRRT_initialize.h  benchmarkRRT_rtwutil.c  benchmarkRRT_rtwutil.h  benchmarkRRT_terminate.c  benchmarkRRT_terminate.h  benchmarkRRT_types.h  buildInfo.mat  collision.c  collision.h  collisionKnowTf.c  collisionKnowTf.h  cost_eval.c  cost_eval.h  eml_rand_mt19937ar_stateful.c  eml_rand_mt19937ar_stateful.h  findMinCost.c  findMinCost.h  linspace.c  linspace.h  main.c  main.h  norm.c  norm.h  opt_time.c  opt_time.h  rand.c  rand.h  (+37 more)
PFFCircle/: DI_costFreeVel.m  collision.m  collisionKnowTf.m  plotWorld.m  segment_cost.m
allExamples/2DDI/PFFCircle/: DI_cost.m  DI_costFreeVel.m  DI_state.m  DI_stateFreeVel.m  DI_time.m  DI_timeFreeVel.m  RRTstar3D.asv  RRTstar3D.m  benchmarkRRT.m  benchmarkRRT.prj  buildInfo.mat  collision.m  collisionFreeVel.m  collisionFreeVelKnowTf.m  cost_npFreeVel.asv  cost_npFreeVel.m  findMinimumPath.m  gen_exe.m  getTime.m  getTime.prj  main.c  matlab_c_timing_utils .c  matlab_c_timing_utils .h  perfAnaly.m  plotExpandedTree.m  plotTraj.m  runtime.txt
allExamples/Quad/PolygonEnvirJerk/: RRTstar3D.asv  RRTstar3D.m  benchmarkRRT.asv  benchmarkRRT.m  buildInfo.mat  collision.m  collisionFreeVel.m  collisionFreeVelKnowTf.m  collisionKnowTf.m  collision_point.m  cost_npFreeVel.m  createKnownWorld.m  findMinCost.m  findMinimumPath.m  gen_exe.m  main.c  matlab_roots.m  matlab_roots.prj  matlab_roots_order_2.m  matlab_roots_order_2.prj  matlab_roots_order_8.m  perfAnaly.m  plotExpandedTree.m  plotTraj.m  quadf_cost.m  quadf_costPFF.m  quadf_state.m  quadf_statePFF.m  quadf_statePFFull.m  quadf_time.m  quadf_timePFF.m  segment_cost.m  segment_costFreeVel.m
benchmark/: CMakeLists.txt  DoubleIntegrator1D.cpp  RigidBodyPlanning.cpp  RigidBodyPlanningWithIntegrationAndControls.cpp  di1  questions.txt
dongliang_rrt_final/: DI3d_costFreeVel.m  DI3d_state.m  DI3d_stateFreeVel.m  DI3d_time.m  DI3d_timeFreeVel.m  DI_time.m  RRTstar3D.m  benchmarkRRT.m  benchmarkRRT.prj  collisionFreeVel.m  collision_point.m  cost10run.fig  createKnownWorld.m  errorbar.fig  perfAnaly.m  plotWorld.m  runtime.txt  segment_cost.m  segment_costFreeVel.m
dongliang_rrt_final/codegen/mex/benchmarkRRT/: cfiGuiReport.mat
new_model/: DI3d_costFreeVel.m  double_integrator.cpp  triple_integrator.cpp
python/: kinoRRT.py
python-old/: World.py  common.py
scripts/: FullFleetDemo.py  KinoRrtDemo.py  Main.py  MultipleDrone.py  PidController.py  PlanarController.py  SingleDrone.py  SstDemo.py  TODO.txt  WorldVisualization.py  analyze.py  analyzeTestController.py  benchmark.py  cfcontroller.py  common.py  log.txt  oldMain.py  quad.py  readBenchmark.py  readRecording.py  test.py  testController.py  testPath.py  vicon.py  window.py
src/: '  .ycm_extra_conf.py  CMakeLists.txt  Makefile  TODO.txt  WorldVisualization.py  boost_wrapper.cpp  common.h  double_integrator.cpp  double_integrator.h  eigen.cpp  gmon.out  kino_rrt_star.cpp  kino_rrt_star.h  main  main.cpp  main.py  quad_oc_tests.cpp  quad_optimal_control.cpp  quad_optimal_control.h  test.cpp  test_quad_optimal_control.cpp  test_tree.cpp  test_world.cpp  tree.cpp  tree.h  world.cpp  world.h
src/sst/: CMakeLists.txt  DoubleIntegrator3D.cpp  Makefile  di  di3  probllems.txt  sst.cpp  sst.h  text.txt
src/tests/: CMakeLists.txt  quad_oc_tests.h  test_quad_optimal_control.h
(+277 files in other folders)
